// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createKafkaSourceStatement > all options 1`] = `
{
  "parameters": [],
  "sql": "
CREATE SOURCE "materialize"."public"."kafka_connection"
IN CLUSTER "source_cluster"
FROM KAFKA CONNECTION "db1"."sc1"."kafka_connection" (TOPIC 'topic_name')
KEY FORMAT AVRO USING CONFLUENT SCHEMA REGISTRY CONNECTION "db2"."sc2"."kafka_csr_connection"
VALUE FORMAT AVRO USING CONFLUENT SCHEMA REGISTRY CONNECTION "db2"."sc2"."kafka_csr_connection"
ENVELOPE UPSERT;",
}
`;

exports[`createKafkaSourceStatement > no csr 1`] = `
{
  "parameters": [],
  "sql": "
CREATE SOURCE "materialize"."public"."kafka_connection"
IN CLUSTER "source_cluster"
FROM KAFKA CONNECTION "db1"."sc1"."kafka_connection" (TOPIC 'topic_name')
KEY FORMAT TEXT
VALUE FORMAT TEXT
ENVELOPE NONE;",
}
`;
